[package]
name = "engine-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "EnginePort adapter for the claude CLI (Claude Code)."

[dependencies]
substrate-core = { version = "0.3.7", path = "../substrate-core" }
engine-spec = { version = "0.3.7", path = "../engine-spec" }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
engine-conformance = { version = "0.3.7", path = "../engine-conformance" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
