[package]
name = "engine-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "EnginePort adapter for the codex CLI (gpt-codex-spark)."

[dependencies]
substrate-core = { path = "../substrate-core" }
engine-spec = { path = "../engine-spec" }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
engine-conformance = { path = "../engine-conformance" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
