[package]
name = "engine-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Conformance suite proving EnginePort is harness-agnostic — run against any adapter."

[dependencies]
substrate-core = { version = "0.3.6", path = "../substrate-core" }
engine-spec = { version = "0.3.6", path = "../engine-spec" }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
