[package]
name = "engine-forge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "FORGE engine adapter implementing EnginePort by driving the forge CLI."
readme = "README.md"
keywords = ["forge", "engine", "adapter", "substrate"]
categories = ["development-tools"]

[dependencies]
substrate-core.workspace = true
engine-spec.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "process", "io-util", "time", "sync", "fs"] }
regex.workspace = true
uuid.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time", "process", "fs"] }
