[package]
name = "engine-forge"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "FORGE engine adapter implementing EnginePort by driving the forge CLI."
readme = "README.md"
keywords = ["forge", "engine", "adapter", "substrate"]
categories = ["development-tools"]

[dependencies]
substrate-core.workspace = true
engine-spec.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "process", "io-util", "time", "sync", "fs"] }
regex.workspace = true
uuid.workspace = true
thiserror.workspace = true
# F5 (2026-06-30): forge-daemon opt-in drop-in for short, bounded forge CLI calls
# (list/dump). Avoids dyld+tokio init cost per spawn. Falls back to direct
# Command::spawn when FORGE_DAEMON env is unset or daemon is not running.
forge_daemon = { workspace = true, optional = true }

[features]
default = []
forge_daemon = ["dep:forge_daemon"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time", "process", "fs"] }
