[package]
name = "engine-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Provider-agnostic TaskSpec -> argv contract."

[dependencies]
substrate-core = { path = "../substrate-core" }
serde.workspace = true
