[package]
name = "engine-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Provider-agnostic TaskSpec -> argv contract."
readme = "README.md"
keywords = ["agent", "argv", "task", "substrate"]
categories = ["development-tools"]

[dependencies]
substrate-core.workspace = true
serde.workspace = true
