[package]
name = "file-watcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WatcherPort implementation: debounced filesystem events via notify."

[dependencies]
substrate-core = { version = "0.3.8", path = "../substrate-core" }
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
uuid.workspace = true
notify-debouncer-mini = "0.7"

[dev-dependencies]
tempfile.workspace = true
