[package]
name = "file-watcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WatcherPort implementation: debounced filesystem events via notify."
# The crates.io name is owned by an unrelated 0.0.18 package; publish this
# workspace implementation only through source/workspace distribution.
publish = false

[dependencies]
substrate-core = { version = "0.3.8", path = "../substrate-core" }
async-trait.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
uuid.workspace = true
notify-debouncer-mini = "0.7"

[dev-dependencies]
tempfile.workspace = true
