[package]
name = "forge_daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Zig forge-daemon client (kqueue+posix_spawn density lever)"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "process", "sync", "time"] }
tracing.workspace = true
thiserror.workspace = true
libc = "0.2"

[build-dependencies]
# No external build deps — build.rs invokes zig directly.

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
