[package]
name = "forge_daemon"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"
description = "Zig forge-daemon client (kqueue+posix_spawn density lever)"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "net", "io-util", "process", "sync", "time"] }
tracing = "0.1"
thiserror = "2.0"
libc = "0.2"

[build-dependencies]
# No external build deps — build.rs invokes zig directly.

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt", "time", "test-util"] }
