[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OpenAI-compatible HTTP gateway for substrate routing, A2A mailbox, and management config."

[[bin]]
name = "substrate-gateway"
path = "src/main.rs"

[dependencies]
substrate-core = { path = "../substrate-core" }
routing-phenotype-router = { path = "../routing-phenotype-router" }
a2a = { path = "../a2a" }
store-sqlite = { path = "../store-sqlite" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
uuid.workspace = true
async-trait.workspace = true
chrono.workspace = true
bytes = "1.5"
notify = "6"
toml = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
http-body-util.workspace = true
rand = "0.8"
prometheus = "0.13"

[dev-dependencies]
http-body-util.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait.workspace = true
substrate-core = { path = "../substrate-core" }
