[package]
name = "omniroute-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OmniRoute RoutingPort adapter: configures forge's openai_compatible provider to point at OmniRoute and picks a model."
publish = false

[dependencies]
substrate-core = { version = "0.3.7", path = "../substrate-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dotenvy = "0.15"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
